Update API_URL to Hugging Face Space live endpoint

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             const errorDisplay = document.getElementById('errorDisplay');
 
             // Define your Flask API endpoint URL
-            const API_URL = 'http://127.0.0.1:5000/predict'; // IMPORTANT: Confirm this matches your Flask server address
+            const API_URL = 'https://sagnik07-sagnic-house-price-predictor.hf.space/predict'; // IMPORTANT: Confirm this matches your Flask server address
 
             // Function to display messages
             function showMessage(element, message, type) {
